# youtube_tui

./: .gitignore  Cargo.toml
src/: commands.rs  config_reader.rs  friendly_panic.rs  list.rs  main.rs  util_macro.rs
src/ui/: drawing.rs  interaction.rs  mod.rs  utils.rs
src/web/: api.rs  extra.rs  mod.rs  utils.rs  yt_channels.rs  yt_video.rs
