[package]
name = "youtube_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking","json"] }
regex = "1.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.73"
rmp-serde = "0.15.5"
rayon = "1.5.1"
termion= "1.5.6"
tui= "0.16.0"
image= "0.23.14"
toml="0.5"
itertools = "0.10.3"
ueberzug = "0.1.0"
log = "0.4.14"
env_logger = "0.9.0"
